--- a/app/src/main/res/menu/bottom_nav_menu_transport_admin.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_transport_admin.xml
@@ -4,15 +4,16 @@
     <item
         android:id="@+id/nav_bookings"
         android:icon="@drawable/ic_menu_book"
-        android:title="@string/title_book_admin" />
+        android:title="@string/label_book_admin" />
+
     <item
         android:id="@+id/nav_scan"
-        android:icon="@drawable/ic_menu_book"
-        android:title="Scan QR" />
+        android:icon="@drawable/ic_menu_scan"
+        android:title="@string/label_scan_admin" />
 
     <item
         android:id="@+id/nav_schedule"
         android:icon="@drawable/ic_menu_schedule"
-        android:title="@string/title_schedule_admin" />
+        android:title="@string/label_schedule_admin" />
 
 </menu>
