--- a/app/src/main/res/menu/nav_drawer_menu_transport_admin.xml
+++ b/app/src/main/res/menu/nav_drawer_menu_transport_admin.xml
@@ -10,15 +10,13 @@
         <item
             android:id="@+id/nav_dashboard"
             android:icon="@drawable/ic_menu_dashboard"
-            android:title="@string/title_dashboard" />
+            android:title="@string/label_dashboard" />
+
         <item
             android:id="@+id/btnProfile"
             android:icon="@drawable/ic_menu_profile"
-            android:title="@string/title_profile" />
-        <item
-            android:id="@+id/nav_about"
-            android:icon="@drawable/ic_menu_about"
-            android:title="@string/title_about" />
+            android:title="@string/label_profile" />
+
     </group>
 
     <group
@@ -26,9 +24,15 @@
         android:checkableBehavior="single">
 
         <item
+            android:id="@+id/btnAbout"
+            android:icon="@drawable/ic_menu_about"
+            android:title="@string/label_about" />
+
+        <item
             android:id="@+id/btnLogout"
             android:icon="@drawable/ic_menu_logout"
             android:title="Sign Out" />
+
     </group>
 
 </menu>
