--- a/app/src/main/res/navigation/mobile_navigation_drawer_transport_admin.xml
+++ b/app/src/main/res/navigation/mobile_navigation_drawer_transport_admin.xml
@@ -2,30 +2,30 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    android:id="@+id/mobile_navigation_drawer_transport_admin"
+    app:startDestination="@+id/nav_dashboard">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.opustech.bookvan.ui.fragments.admin.DashboardAdminFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_dashboard_admin" />
+        android:id="@+id/nav_dashboard"
+        android:name="com.opustech.bookvan.ui.fragments.transport.DashboardTransportAdminFragment"
+        android:label="@string/label_dashboard"
+        tools:layout="@layout/fragment_dashboard_transport_admin" />
 
     <fragment
         android:id="@+id/nav_bookings"
-        android:name="com.opustech.bookvan.ui.fragments.admin.bookings.BookingsFragment"
-        android:label="@string/title_book_admin"
-        tools:layout="@layout/fragment_bookings" />
+        android:name="com.opustech.bookvan.ui.fragments.transport.bookings.BookingsTransportFragment"
+        android:label="@string/label_book_admin"
+        tools:layout="@layout/fragment_bookings_transport" />
 
     <fragment
-        android:id="@+id/nav_rentals"
-        android:name="com.opustech.bookvan.ui.fragments.admin.rentals.RentalsFragment"
-        android:label="@string/title_rent_admin"
-        tools:layout="@layout/fragment_rentals" />
+        android:id="@+id/nav_scan"
+        android:name="com.opustech.bookvan.ui.fragments.transport.ScanBookingFragment"
+        android:label="@string/label_scan_admin"
+        tools:layout="@layout/fragment_scan_booking" />
 
     <fragment
         android:id="@+id/nav_schedule"
-        android:name="com.opustech.bookvan.ui.fragments.admin.ScheduleAdminFragment"
-        android:label="@string/title_schedule_admin"
-        tools:layout="@layout/fragment_schedule_admin" />
+        android:name="com.opustech.bookvan.ui.fragments.transport.DashboardTransportAdminFragment"
+        android:label="@string/label_schedule_admin"
+        tools:layout="@layout/fragment_dashboard_transport_admin" />
 </navigation>
