--- a/app/src/main/res/layout/activity_user_confirm_booking_qr.xml
+++ b/app/src/main/res/layout/activity_user_confirm_booking_qr.xml
@@ -44,6 +44,7 @@
                     android:id="@+id/qrPlaceholder"
                     android:layout_width="250dp"
                     android:layout_height="250dp"
+                    android:padding="16dp"
                     android:layout_gravity="center"
                     android:background="@drawable/background_qr" />
 
