--- a/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bookingCard"
@@ -9,6 +10,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        app:cardCornerRadius="16dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
         android:elevation="8dp"
